--- a/components/cards.html
+++ b/components/cards.html
@@ -90,7 +90,7 @@
         <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Cards with Image</div>
 
           <!--Card with Image-->
-          <div class="rounded-xl overflow-hidden shadow-lg mx-4 my-5">
+          <div class="rounded-xl overflow-hidden shadow-lg mx-4 mt-5">
             <img class="w-full" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80"> 
             <div class="px-6 py-4 bg-slate-200 dark:bg-neutral-700 dark:border-gray-700">
               <h1 class="font-bold text-xl mb-2 dark:text-white">Card with Image</h1>
@@ -104,7 +104,7 @@
         
 
           <!--Card with Blured Image-->
-          <div class="rounded-xl overflow-hidden shadow-lg mx-4 my-5">
+          <div class="rounded-xl overflow-hidden shadow-lg mx-4 mt-5">
             <img class="w-full blur-lg" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80"> 
             <div class="px-6 py-4 bg-slate-200 dark:bg-neutral-700 dark:border-gray-700">
               <h1 class="font-bold text-xl mb-2 dark:text-white">Card with Blured Image</h1>
@@ -117,11 +117,58 @@
           </div>
 
           <!--Backdrop blured image-->
-          <div class="relative overflow-hidden rounded-xl shadow-lg mx-4 my-5">
-            <img class="object-cover w-full h-48 blur-3xl" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80" alt=""/>
+          <div class="relative overflow-hidden rounded-xl shadow-lg mx-4 mt-5">
+            <img class="object-cover blur-3xl h-56" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80" alt=""/>
             <div class="absolute top-0 left-0 px-6 py-4">
               <h4 class="mb-3 text-xl font-bold tracking-tight text-white">This is card with backgound overlay</h4>
-              <p class="leading-normal text-gray-100">Lorem ipsum dolor, sit amet cons ectetur adipis icing elit. Praesen tium, quibusdam facere quo laborum maiores sequi nam tenetur laud.</p>
+              <p class="leading-normal text-gray-100">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, deserunt! Deleniti quaerat exercitationem,
+                harum placeat rem animi sint dolore quis a magni nemo dolor iste porro debitis nesciunt eveniet explicabo!
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+
+      <!--Cards with Image-->
+      <div class="bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+        <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Cards with Text</div>
+
+          <!--Card with Text-->
+          <div class="rounded-xl overflow-hidden shadow-lg mx-4 mt-5"> 
+            <div class="px-6 py-4 bg-slate-200 dark:bg-neutral-700">
+              <h1 class="font-bold text-xl mb-2 dark:text-white">Card with Text</h1>
+                <p class="text-gray-700 text-base dark:text-gray-400">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatibus quia, nulla! Maiores et perferendis eaque,
+                exercitationem praesentium nihil.
+                </p>
+            </div>
+          </div>
+        
+
+          <!--Colored Card-->
+          <div class="rounded-xl overflow-hidden shadow-lg mx-4 mt-5"> 
+            <div class="px-6 py-4 bg-blue-400">
+              <h1 class="font-bold text-xl mb-2 text-gray-200">Colored Card</h1>
+                <p class="text-gray-300 text-base">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatibus quia, nulla! Maiores et perferendis eaque,
+                exercitationem praesentium nihil.
+                </p>
+            </div>
+          </div>
+
+          <!--Colored Shadow Card-->
+          <div class="rounded-xl overflow-hidden shadow-lg shadow-blue-400 mx-4 mt-5 mb-5"> 
+            <div class="px-6 py-4 bg-blue-400">
+              <h1 class="font-bold text-xl mb-2 text-gray-200">Colored Shadow Card</h1>
+                <p class="text-gray-300 text-base">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatibus quia, nulla! Maiores et perferendis eaque,
+                exercitationem praesentium nihil.
+                </p>
             </div>
           </div>
 
@@ -129,13 +176,13 @@
 
                     
       <!--E-comm Card-->
-      <div class="bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+      <div class="bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-10">
         <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">E-comm Card</div>
 
           <!--Card-->
           <div class="w-full rounded-xl shadow-lg bg-slate-100 dark:bg-neutral-700 ">
             <a href="#">
-              <img class="p-8 rounded-xl" src="https://prostoreshop.ru/wp-content/uploads/2022/08/noutbuk-apple-macbook-air-m2-2022-8-256-gb-ssd-midnight-temnaya-noch-mly33ll-a-2.jpg" alt="" />
+              <img class="p-6" src="https://prostoreshop.ru/wp-content/uploads/2022/08/noutbuk-apple-macbook-air-m2-2022-8-256-gb-ssd-midnight-temnaya-noch-mly33ll-a-2.jpg" alt="" />
             </a>
             <div class="px-5 pb-5">
               <a href="#">
@@ -166,7 +213,7 @@
 
 
   <!--Footer Navigation Bar-->
-  <div class="w-full h-screen">
+  <div class="w-full h-screen fixed">
     <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
       <div id="tabs" class="flex justify-between">
         <!--Wigets-->
