--- a/components/modal.html
+++ b/components/modal.html
@@ -25,7 +25,7 @@
 
         <!--Basic Modal-->
         <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-            <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Modal</div>
+            <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Empty Modal</div>
 
             <!--Bottom Modal-->
             <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
@@ -37,7 +37,61 @@
                             <span>modal</span>
                         </button>
                         
-                        <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3 top-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+                        <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+                            <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
+                                <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
+                                    x-transition:enter="transition ease-out duration-300 transform"
+                                    x-transition:enter-start="opacity-0" 
+                                    x-transition:enter-end="opacity-100"
+                                    x-transition:leave="transition ease-in duration-200 transform"
+                                    x-transition:leave-start="opacity-100" 
+                                    x-transition:leave-end="opacity-0"
+                                    class="fixed inset-0 transition-opacity bg-opacity-40 backdrop-blur-md" aria-hidden="true">
+                                </div>
+                        
+                                <div x-cloak x-show="modelOpen" 
+                                    x-transition:enter="transition ease-out duration-300 transform"
+                                    x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95" 
+                                    x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                                    x-transition:leave="transition ease-in duration-200 transform"
+                                    x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" 
+                                    x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                                    class="inline-block w-full p-8 my-32 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-neutral-800 rounded-xl shadow-lg"
+                                    >
+                                        <div class="flex items-center justify-between space-x-4">
+                                            <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+                                            <!--Button for Close Modal Window-->
+                                            <button @click="modelOpen = false" class="text-gray-600 focus:outline-none hover:text-gray-700">
+                                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                                </svg>
+                                            </button>
+                                        </div>  
+                                        
+                                </div>            
+                            </div>
+                        </div>
+                            
+                    </div>
+                </div>
+            </div>
+
+
+        <!--Attention Modal-->
+        <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Attention Modal</div>
+
+          <!--Attention Modal-->
+            <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+                <div id="themeModal">
+                    <div x-data="{ modelOpen: false }">
+                        <button @click="modelOpen =!modelOpen" class="flex items-center justify-center px-3 py-2 space-x-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-blue-400 rounded-md">
+                            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+                            </svg>
+                            <span>modal</span>
+                        </button>
+                        
+                        <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
                             <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
                                 <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
                                     x-transition:enter="transition ease-out duration-300 transform"
@@ -58,8 +112,10 @@
                                     x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
                                     class="inline-block w-full max-w-xl p-8 my-32 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-neutral-800 rounded-xl shadow-lg"
                                     >
+                                        <!--Modal Header-->
                                         <div class="flex items-center justify-between space-x-4">
                                             <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+
                                             <!--Button for Close Modal Window-->
                                             <button @click="modelOpen = false" class="text-gray-600 focus:outline-none hover:text-gray-700">
                                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -67,13 +123,124 @@
                                                 </svg>
                                             </button>
                                         </div>  
+
+                                        <!--Modal Body-->
+                                        <div class="text-center p-5 flex-auto justify-center">
+
+                                            <svg fill="#ff0000" height="70px" width="70px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" class="flex items-center"
+                                            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 246.027 246.027" xml:space="preserve" stroke="#ff0000">
+                                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                            <g id="SVGRepo_iconCarrier">
+                                            <path d="M242.751,196.508L143.937,25.358c-4.367-7.564-12.189-12.081-20.924-12.081c-8.735,0-16.557,4.516-20.924,12.081 L3.276,196.508c-4.368,7.564-4.368,16.596,0,24.161s12.189,12.081,20.924,12.081h197.629c8.734,0,16.556-4.516,20.923-12.08 C247.119,213.105,247.118,204.073,242.751,196.508z M123.014,204.906c-8.672,0-15.727-7.055-15.727-15.727 c0-8.671,7.055-15.726,15.727-15.726s15.727,7.055,15.727,15.726C138.74,197.852,131.685,204.906,123.014,204.906z M138.847,137.68 c0,8.73-7.103,15.833-15.833,15.833s-15.833-7.103-15.833-15.833V65.013c0-4.142,3.358-7.5,7.5-7.5h16.667 c4.143,0,7.5,3.358,7.5,7.5V137.68z"></path> </g>
+                                            </svg>
+
+                                            <h2 class="text-2xl font-bold py-4 dark:text-white">Attention</h3>
+                                            <p class="text-sm text-gray-500 px-8">
+                                                Do you really want to delete your account?
+                                                This process cannot be undone
+                                            </p>    
+                                        </div>
+
+                                        <!--Modal Footer-->
+                                        <div class="p-3  mt-2 text-center space-x-4 md:block">
+                                            <button @click="modelOpen = false"
+                                                class="mb-2 bg-white px-5 py-2 text-sm shadow-sm font-medium tracking-wider border text-gray-600 rounded-xl hover:shadow-lg hover:bg-gray-100">
+                                                Cancel
+                                            </button>
+                                            <button @click="modelOpen = false"
+                                                class="mb-2 bg-red-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+                                                Delete
+                                            </button>
+                                        </div>
+
                                 </div>            
                             </div>
                         </div>
                             
                     </div>
                 </div>
-            </div>
+            </div>  
+
+
+        <!--Success Modal-->
+        <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Success Modal</div>
+
+          <!--Success Modal-->
+            <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+                <div id="themeModal">
+                    <div x-data="{ modelOpen: false }">
+                        <button @click="modelOpen =!modelOpen" class="flex items-center justify-center px-3 py-2 space-x-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-blue-400 rounded-md">
+                            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+                            </svg>
+                            <span>modal</span>
+                        </button>
+                        
+                        <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+                            <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
+                                <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
+                                    x-transition:enter="transition ease-out duration-300 transform"
+                                    x-transition:enter-start="opacity-0" 
+                                    x-transition:enter-end="opacity-100"
+                                    x-transition:leave="transition ease-in duration-200 transform"
+                                    x-transition:leave-start="opacity-100" 
+                                    x-transition:leave-end="opacity-0"
+                                    class="fixed inset-0 transition-opacity bg-opacity-40 backdrop-blur-md" aria-hidden="true">
+                                </div>
+                        
+                                <div x-cloak x-show="modelOpen" 
+                                    x-transition:enter="transition ease-out duration-300 transform"
+                                    x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95" 
+                                    x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                                    x-transition:leave="transition ease-in duration-200 transform"
+                                    x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" 
+                                    x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                                    class="inline-block w-full max-w-xl p-8 my-32 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-neutral-800 rounded-xl shadow-lg"
+                                    >
+                                        <!--Modal Header-->
+                                        <div class="flex items-center justify-between space-x-4">
+                                            <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+
+                                            <!--Button for Close Modal Window-->
+                                            <button @click="modelOpen = false" class="text-gray-600 focus:outline-none hover:text-gray-700">
+                                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                                </svg>
+                                            </button>
+                                        </div>  
+
+                                        <!--Modal Body-->
+                                        <div class="text-center p-5 flex-auto justify-center">
+
+                                            <svg width="70px" height="70px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#1eff00" stroke="#1eff00" class="flex items-center">
+                                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
+                                                <path fill="#00ff2a" d="M512 64a448 448 0 1 1 0 896 448 448 0 0 1 0-896zm-55.808 536.384-99.52-99.584a38.4 38.4 0 1 0-54.336 54.336l126.72 126.72a38.272 38.272 0 0 0 54.336 0l262.4-262.464a38.4 38.4 0 1 0-54.272-54.336L456.192 600.384z"></path></g>
+                                            </svg>
+
+                                            <h2 class="text-2xl font-bold py-4 dark:text-white">Success</h3>
+                                            <p class="text-sm text-gray-500 px-8">
+                                                This modal window indicates that everything went success.
+                                                Yay!
+                                            </p>    
+                                        </div>
+
+                                        <!--Modal Footer-->
+                                        <div class="p-3 mt-2 text-center space-x-4 md:block">
+                                            <button @click="modelOpen = false"
+                                                class="mb-2 bg-green-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+                                                Confirm
+                                            </button>
+                                        </div>
+
+                                </div>            
+                            </div>
+                        </div>
+                            
+                    </div>
+                </div>
+            </div>  
+
                             
             </div>
             </div>
