--- a/components/modal.html
+++ b/components/modal.html
@@ -36,7 +36,7 @@
                 <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
     
                 <!--Modal Body-->
-                <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+                <div id="modalEmpty" class="text-center w-4/5 z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
                 <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
                 <p class="text-sm text-gray-500 px-8">
                     There is nothing here yet...
@@ -58,7 +58,7 @@
                 <div id="overlaySuccess" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
 
                 <!--Modal Body-->
-                <div id="modalSuccess" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-green-500">
+                <div id="modalSuccess" class="text-center w-4/5 z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-green-500">
 
                 <svg width="70px" height="70px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#1eff00" stroke="#1eff00" class="flex items-center">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -88,7 +88,7 @@
                 <div id="overlayInfo" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
     
                 <!--Modal Body-->
-                <div id="modalInfo" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-blue-500">
+                <div id="modalInfo" class="text-center w-4/5 z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-blue-500">
     
                     <svg width="70px" height="70px" viewBox="0 0 24 24" fill="#1eff00" xmlns="http://www.w3.org/2000/svg" stroke="#1eff00" class="flex items-center">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -119,7 +119,7 @@
                 <div id="overlayDanger" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
     
                 <!--Modal Body-->
-                <div id="modalDanger" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-red-500">
+                <div id="modalDanger" class="text-center w-4/5 z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-red-500">
     
                     <svg width="70px" height="70px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ff0000" class="flex items-center">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -149,7 +149,7 @@
                 <div id="overlayForm" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
     
                 <!--Modal Body-->
-                <div id="modalForm" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-red-500">
+                <div id="modalForm" class="text-center w-4/5 z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg border-t-4 border-red-500">
     
                     <svg width="70px" height="70px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ff0000" class="flex items-center">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
